<resources>
    <string name="app_name">Stock tracker</string>
    <string name="format_delta_price">%1$.2f\$ | %2$.2f\%%</string>
    <string name="format_current_price">%1$.2f\$</string>
    <string name="find_company_or_ticker">Find company or ticker</string>
    <string name="stocks">Stocks</string>
    <string name="favorite">Favorite</string>
    <string name="retry">Retry</string>

    <!--    Detail fragment     -->
    <string name="base_information">Base information</string>
    <string name="financial_performance">Financial performance</string>
    <string name="format_phone">Phone: %1$s</string>
    <string name="format_exchange">Exchange: %1$s</string>
    <string name="format_market_cap">Market capitalization: %1$.2f\$</string>
    <string name="format_number_outstanding">Number of outstanding shares: %1$.2f</string>
    <string name="format_industry">Industry: %1$s</string>

    <string name="format_day_open">Day open: %1$.2f\$</string>
    <string name="format_previous_day_open">Previous day open: %1$.2f\$</string>

    <string name="more">More</string>

    <string name="no_news_msg">Ooops…There are no news for the last 4 days</string>
    <!--    end Detail fragment     -->

    <!--    Search fragment     -->
    <string name="you_ve_searched_for_this">You\'ve searched for this</string>
    <!--    end Search fragment     -->

    <!--    Stocks fragment-->
    <string name="loading_stocks_failed">Loading of stocks failed</string>
    <string name="refreshing_quotes_failed">Refreshing of quotes failed.</string>
    <!--    end Stocks fragment-->


    <!--    Favorites fragment-->
    <string name="no_favorites">There is no favorites yet. \n You can add them with long click on stock.</string>
    <!--    end Favorites fragment-->


</resources>